
- added a class to show html help in an mdi child
- added a new dock to search R help
- many changes in labels
- fixed: bug that prevented RKWard to build on some systems
- added R functions to show graphs in the html output
- use a KHTML part to show output

--- Version 0.3.0 - Nov-12-2004
- added french and italian translations
- added toolbars and some icons
- some small i18n fixes
- rework of user interface (now using KMDI and IDEAl mode)
- compilation fix for R 2.0
- added basic per variable formatting options in the data editor (alignment, precision)
- fixed: cell last edited did not react to single mouse click
- fixed: switched to line below after a new row was automatically added
- fixed: cursor right did not move to next cell when editing last (active) column
- while editing, tab-key moves to next cell

--- Version 0.2.9 - Sep-22-2004
- use KDialog::marginHint () and KDialog::spacingHint () in plugins
- fixed a crash in the formula widget
- converted plugin element to QWidgets (in preparation for more extensive rework of plugin elements)
- almost complete rework of data editor
- added edit support for factors
- added support for editing factor levels
- data editor stores data more efficiently
- renaming columns in a data.frame does not change their position in the frame
- recursively remove children of removed objects (fixes one of probably many memory leaks)
- wait for backend-thread to terminate on exit. Avoids crashes when closing RKWard
- do not crash if loading the "rkward" R package fails, but rather display a nice error-message

--- Version 0.2.8 - Sep-09-2004
- override for require () to show install-packages dialog, if required package is not installed.
- Dialog to load/unload packages, update and install packages from CRAN
- added capability to cancel commands (not properly integrated in the GUI, yet)
- basic name checking for objects added or renamed by the user
- remove uneccessary blank are below menu in R-Console window