@@ -1,5 +1,3 @@
 doc
 po
 rkward
-rkward-0.2.9
-rkward-0.3.0
